tests/pass/ArithRightShiftAssign.java
package pass;

public class ArithRightShiftAssign {

	public int arithRightShiftAssign(int x, int y) {
		int t = x;
		t >>= y;
		return t;
	}
}
