tests/fail/ArithRightShiftAssign.java
package fail;

public class ArithRightShiftAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t >>= "a";
	}	
}
